# voiceforge-ai

./: .gitignore  README.md  app.spec  pyproject.toml
.sisyphus/plans/: real-time-voice-changer-v1.md
models/default/: default.onnx
src/: __init__.py  main.py
src/audio/: __init__.py  buffer.py  capture.py  output.py
src/config/: paths.py  settings.py
src/core/: __init__.py  audio_contracts.py  fixtures.py  model_manifest.py
src/engine/: __init__.py  ai_model.py  dsp_effects.py  voice_engine.py
src/runtime/: __init__.py  orchestrator.py
src/ui/: __init__.py  main_window.py
src/utils/: diagnostics.py
src/voiceforge_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/integration/: test_bypass_pipeline.py  test_device_enumeration.py  test_device_hot_unplug.py  test_metrics_export.py  test_missing_virtual_device_guidance.py  test_mode_switch_regression.py  test_model_provider_fallback.py  test_onnx_warmup.py  test_overload_backpressure.py  test_overload_metrics_visibility.py  test_pipeline_state_machine.py  test_provider_preflight.py  test_soak_runner.py
tests/smoke/: test_cli.py  test_missing_model_asset.py  test_packaged_launch.py  test_standard_paths_layout.py
tests/ui/: test_diagnostics_audience_split.py  test_diagnostics_panel.py  test_main_window.py  test_overlay_hotkey.py  test_provider_failure_banner.py  test_ui_state_consistency.py
tests/unit/: test_audio_contracts.py  test_dsp_effects.py  test_dsp_parameter_bounds.py  test_dsp_quality_metrics.py  test_fixture_matrix.py  (+4 more)
tools/: pipeline_harness.py  routing_probe.py
