[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceforge-ai"
version = "0.1.0"
description = "Windows-first real-time AI voice changer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "mschoi0411" }
]
dependencies = [
  "numpy>=1.26",
  "sounddevice>=0.4.6",
  "PySide6>=6.6",
  "onnxruntime>=1.16"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-qt>=4.4"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
